source/oci/odci.d


struct ODCIPredInfo_ind
{
    OCIInd atomic;
    OCIInd ObjectSchema;
    OCIInd ObjectName;
    OCIInd MethodName;
    OCIInd Flags;
}

struct ODCIFilterInfo
{
    ODCIColInfo ColInfo;
    OCINumber Flags;
    OCIAnyData* strt;
    OCIAnyData* stop;
}

struct ODCIFilterInfo_ind
{
    OCIInd atomic;
    ODCIColInfo_ind ColInfo;
    OCIInd Flags;
    OCIInd strt;
    OCIInd stop;
}

struct ODCIOrderByInfo
{
    OCINumber ExprType;
    OCIString* ObjectSchema;
    OCIString* TableName;
    OCIString* ExprName;
    OCINumber SortOrder;
}

struct ODCIOrderByInfo_ind
{
    OCIInd atomic;
    OCIInd ExprType;
    OCIInd ObjectSchema;
    OCIInd TableName;
    OCIInd ExprName;
    OCIInd SortOrder;
}

struct ODCICompQueryInfo
{
    ODCIFilterInfoList* PredInfo;
    ODCIOrderByInfoList* ObyInfo;
}

struct ODCICompQueryInfo_ind
{
    OCIInd atomic;
    OCIInd PredInfo;
    OCIInd ObyInfo;
}

struct ODCIObject
{
    OCIString* ObjectSchema;
    OCIString* ObjectName;
}

struct ODCIObject_ind
{
    OCIInd atomic;
    OCIInd ObjectSchema;
    OCIInd ObjectName;
}

struct ODCIQueryInfo
{
    OCINumber Flags;
    ODCIObjectList* AncOps;
    ODCICompQueryInfo CompInfo;
}

struct ODCIQueryInfo_ind
{
    OCIInd atomic;
    OCIInd Flags;
    OCIInd AncOps;
    ODCICompQueryInfo_ind CompInfo;
}

struct ODCIIndexCtx
{
    ODCIIndexInfo IndexInfo;
    OCIString* Rid;
    ODCIQueryInfo QueryInfo;
}

struct ODCIIndexCtx_ind
{
    OCIInd atomic;
    ODCIIndexInfo_ind IndexInfo;
    OCIInd Rid;
    ODCIQueryInfo_ind QueryInfo;
}

struct ODCIFuncInfo
{
    OCIString* ObjectSchema;
    OCIString* ObjectName;
    OCIString* MethodName;
    OCINumber Flags;
}

struct ODCIFuncInfo_ind
{
    OCIInd atomic;
    OCIInd ObjectSchema;
    OCIInd ObjectName;
    OCIInd MethodName;
    OCIInd Flags;
}

struct ODCICost
{
    OCINumber CPUcost;
    OCINumber IOcost;
    OCINumber NetworkCost;
    OCIString* IndexCostInfo;
}

struct ODCICost_ind
{
    OCIInd atomic;
    OCIInd CPUcost;
    OCIInd IOcost;
    OCIInd NetworkCost;
    OCIInd IndexCostInfo;
}

struct ODCIArgDesc
{
    OCINumber ArgType;
    OCIString* TableName;
    OCIString* TableSchema;
    OCIString* ColName;
    OCIString* TablePartitionLower;
    OCIString* TablePartitionUpper;
    OCINumber Cardinality;
}

struct ODCIArgDesc_ind
{
    OCIInd atomic;
    OCIInd ArgType;
    OCIInd TableName;
    OCIInd TableSchema;
    OCIInd ColName;
    OCIInd TablePartitionLower;
    OCIInd TablePartitionUpper;
    OCIInd Cardinality;
}

struct ODCIStatsOptions
{
    OCINumber Sample;
    OCINumber Options;
    OCINumber Flags;
}

struct ODCIStatsOptions_ind
{
    OCIInd atomic;
    OCIInd Sample;
    OCIInd Options;
    OCIInd Flags;
}

struct ODCIEnv
{
    OCINumber EnvFlags;
    OCINumber CallProperty;
    OCINumber DebugLevel;
    OCINumber CursorNum;
}

struct ODCIEnv_ind
{
    OCIInd _atomic;
    OCIInd EnvFlags;
    OCIInd CallProperty;
    OCIInd DebugLevel;
    OCIInd CursorNum;
}

struct ODCIPartInfo
{
    OCIString* TablePartition;
    OCIString* IndexPartition;
    OCINumber IndexPartitionIden;
    OCINumber PartOp;
}

struct ODCIPartInfo_ind
{
    OCIInd atomic;
    OCIInd TablePartition;
    OCIInd IndexPartition;
    OCIInd IndexPartitionIden;
    OCIInd PartOp;
}

/*---------- External Tables ----------*/
struct ODCIExtTableInfo
{
    OCIString* TableSchema;
    OCIString* TableName;
    ODCIColInfoList* RefCols;
    OCIClobLocator* AccessParmClob;
    OCIBlobLocator* AccessParmBlob;
    ODCIArgDescList* Locations;
    ODCIArgDescList* Directories;
    OCIString* DefaultDirectory;
    OCIString* DriverType;
    OCINumber OpCode;
    OCINumber AgentNum;
    OCINumber GranuleSize;
    OCINumber Flag;
    OCINumber SamplePercent;
    OCINumber MaxDoP;
    OCIRaw* SharedBuf;
    OCIString* MTableName;
    OCIString* MTableSchema;
    OCINumber TableObjNo;
}

struct ODCIExtTableInfo_ind
{
    OCIInd _atomic;
    OCIInd TableSchema;
    OCIInd TableName;
    OCIInd RefCols;
    OCIInd AccessParmClob;
    OCIInd AccessParmBlob;
    OCIInd Locations;
    OCIInd Directories;
    OCIInd DefaultDirectory;
    OCIInd DriverType;
    OCIInd OpCode;
    OCIInd AgentNum;
    OCIInd GranuleSize;
    OCIInd Flag;
    OCIInd SamplePercent;
    OCIInd MaxDoP;
    OCIInd SharedBuf;
    OCIInd MTableName;
    OCIInd MTableSchema;
    OCIInd TableObjNo;
}

struct ODCIExtTableQCInfo
{
    OCINumber NumGranules;
    OCINumber NumLocations;
    ODCIGranuleList* GranuleInfo;
    OCINumber IntraSourceConcurrency;
    OCINumber MaxDoP;
    OCIRaw* SharedBuf;
}

struct ODCIExtTableQCInfo_ind
{
    OCIInd _atomic;
    OCIInd NumGranules;
    OCIInd NumLocations;
    OCIInd GranuleInfo;
    OCIInd IntraSourceConcurrency;
    OCIInd MaxDoP;
    OCIInd SharedBuf;
}

/*********************************************************/
/* Table Function Info types (used by ODCITablePrepare)  */
/*********************************************************/

struct ODCITabFuncInfo
{
    ODCINumberList* Attrs;
    OCIType_* RetType;
}

struct ODCITabFuncInfo_ind
{
    OCIInd _atomic;
    OCIInd Attrs;
    OCIInd RetType;
}

/*********************************************************************/
/* Table Function Statistics types (used by ODCIStatsTableFunction)  */
/*********************************************************************/

struct ODCITabFuncStats
{
    OCINumber num_rows;
}

struct ODCITabFuncStats_ind
{
    OCIInd _atomic;
    OCIInd num_rows;
}

/*---------------------------------------------------------------------------
                     PRIVATE TYPES AND CONSTANTS
  ---------------------------------------------------------------------------*/

/*---------------------------------------------------------------------------
                           PUBLIC FUNCTIONS
  ---------------------------------------------------------------------------*/

/*---------------------------------------------------------------------------
                          PRIVATE FUNCTIONS
  ---------------------------------------------------------------------------*/

/* ODCI_ORACLE */
